--- a/mappable-transformers.cabal
+++ b/mappable-transformers.cabal
@@ -45,7 +45,7 @@ library
     default-language: Haskell2010
     ghc-options:      -Wall
 
-executable exec
+executable examples
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
@@ -57,7 +57,7 @@ executable exec
                     , mtl
                     , mappable-transformers
 
-    hs-source-dirs:   app
+    hs-source-dirs:   examples
     default-language: Haskell2010
 
 test-suite mappable-transformers-test
