--- a/mappable-transformers.cabal
+++ b/mappable-transformers.cabal
@@ -49,7 +49,7 @@ executable examples
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:    Reader
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
