--- a/mappable-transformers.cabal
+++ b/mappable-transformers.cabal
@@ -40,7 +40,8 @@ library
                         DefaultSignatures
 
     build-depends:    base ^>=4.14.3.0
-                    , mtl
+                    , mtl >= 2.3
+                    , transformers
     hs-source-dirs:   src
     default-language: Haskell2010
     ghc-options:      -Wall
@@ -55,6 +56,7 @@ executable examples
     -- other-extensions:
     build-depends:    base ^>=4.14.3.0
                     , mtl
+                    , transformers
                     , mappable-transformers
 
     hs-source-dirs:   examples
