--- a/mappable-transformers.cabal
+++ b/mappable-transformers.cabal
@@ -51,6 +51,7 @@ executable examples
 
     -- Modules included in this executable, other than Main.
     other-modules:    Reader
+                      Except
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
