--- a/mappable-transformers.cabal
+++ b/mappable-transformers.cabal
@@ -52,6 +52,7 @@ executable examples
     -- Modules included in this executable, other than Main.
     other-modules:    Reader
                       Except
+                      State
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
