Haddock comments with small examples for classes added

--- a/mappable-transformers.cabal
+++ b/mappable-transformers.cabal
@@ -53,6 +53,10 @@ executable examples
     other-modules:    Reader
                       Except
                       State
+                      Doc.Except
+                      Doc.Reader
+                      Doc.State
+                      Doc.Writer
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
