--- a/mappable-transformers.cabal
+++ b/mappable-transformers.cabal
@@ -43,7 +43,7 @@ library
                         DefaultSignatures
 
     build-depends:    base ^>=4.14.3.0
-                    , mtl >= 2.3
+                    , mtl >= 2.2 && < 2.3
                     , transformers
     hs-source-dirs:   src
     default-language: Haskell2010
